--- a/app/assets/stylesheets/teams.css.scss
+++ b/app/assets/stylesheets/teams.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Teams controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.teams-list {
+	display: inline;
+	margin: 0;
+	padding: 0;
+	li {
+		display: inline-block;
+		width: 125px;
+		height: 125px;
+	}
+	img {
+		display: block;
+	}
+}
