--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,25 +1,7 @@
-<h1>Listing teams</h1>
+<h1>Teams</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>League</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
+<ul class="teams-list">
 <% @teams.each do |team| %>
-  <tr>
-    <td><%= team.name %></td>
-    <td><%= team.league %></td>
-    <td><%= link_to 'Show', team %></td>
-    <td><%= link_to 'Edit', edit_team_path(team) %></td>
-    <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+  <li><%= image_tag "#{team.name.downcase.delete(' ')}.gif" %><%= link_to "#{team.location} #{team.name}", post_path(team.id) %>
+  </li>
 <% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Team', new_team_path %>
