--- a/app/assets/stylesheets/teams.css.scss
+++ b/app/assets/stylesheets/teams.css.scss
@@ -10,8 +10,10 @@
 		display: inline-block;
 		width: 125px;
 		height: 125px;
+		text-align: center;
 	}
 	img {
 		display: block;
+		margin: 0 auto;
 	}
 }
