--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,7 +1,11 @@
-<h1>Teams</h1>
+<h1>NBA Teams</h1>
+
+<p>Pick a team to view the latest EPSN highlights. This is an experiment with the EPSN API.</p>
 
 <ul class="teams-list">
 <% @teams.each do |team| %>
-  <li><%= image_tag "#{team.name.downcase.delete(' ')}.gif" %><%= link_to "#{team.location} #{team.name}", post_path(team.id) %>
+  <li><%= link_to team_path(team.id) do %>
+    <%= image_tag "#{team.name.downcase.delete(' ')}.gif" %><%= "#{team.location} #{team.name}" %>
+    <% end %>
   </li>
 <% end %>
