--- a/app/views/teams/_image.html.erb
+++ b/app/views/teams/_image.html.erb
@@ -1,5 +1,5 @@
-<%= link_to (item.links["web"]["href"]), class: 'link-wrapper' do %>
-    <div class="wrapper"><%= image_tag(swap_size(item.images[0]["url"])) if item.images[0] %>
+<%= link_to (item.links.web.href), class: 'link-wrapper' do %>
+    <div class="wrapper"><%= image_tag(swap_size(item.images[0].url), class: 'espn-image') if item.images[0] %>
 		<p class="overlay" style="border-left-color: #<%= team.color %>;"><%= item.title || item.headline %><time><%= item.published.to_time %></time></p>
     </div>
   </div>
