--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
 	<footer>
 		<%= link_to 'http://espn.go.com/' do %><%= image_tag 'espn-api-silver_150.png', class: 'branding' %><% end %>
-		<%= link_to 'http://twitter.com/dsmith1024' do %>@DSmith1024<% end %>
+		<%= link_to 'http://twitter.com/dsmith1024', class: 'twitter-link' do %>@DSmith1024<% end %>
 	</footer>
 	<%= javascript_include_tag "application" %>
 </body>
