--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -24,5 +24,5 @@
 </ul>
 
 <nav class="team-info">
-<p><%= link_to 'Back to all sports', sports_path %></p>
+<p><%= link_to 'Back to all sports', sports_path, class: 'back-link' %></p>
 </nav>
